[package]
name = "proxytoggle"
version = "0.1.0"
authors = ["Nicolas BAUW <nbauw@hotmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systray = { path = "../systray-rs" }
winreg = "0.7"

[build-dependencies]
winres = "0.1"