[package]
name = "proxytoggle"
version = "0.1.0"
authors = ["Nicolas BAUW <nbauw@hotmail.com>"]
edition = "2018"
repository = "https://github.com/nicolasbauw/proxytoggle_systray_rs"
keywords = ["proxy", "windows", "policy", "systray"]
description = "Quick access to set the proxy state (enabled or disabled) via the systray, and checking system proxy setting every second to fight eventual group policy."
license = "GPL-3.0"
readme = "README.md"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systray = { git = "https://github.com/nicolasbauw/systray-rs", tag="0.4.1" }
winreg = "0.7"

[build-dependencies]
winres = "0.1"